modules/styles/flow/widgets/mw.flow.ui.NavigationWidget.less
// This should be replaced completely by the navigation widget
.flow-board-navigation {
	// This is a hack, we really should, instead, work with
	// overlays.
	z-index: 1;
}

.flow-ui-navigationWidget {
	width: 100%;
	z-index: 1;
	position: relative;
	border-bottom: 1px solid #c8ccd1;

	&-affixed {
		background: #fff;
		position: fixed;
		z-index: 2;
		top: 0;

		.flow-ui-tocWidget {
			width: 100%;
		}
	}

	&-clear {
		clear: both;
	}

	.flow-ui-tocWidget {
		display: inline-block;
		float: left;

		&-button {
			width: 100%;
			.oo-ui-buttonElement-button {
				width: 100%;
				.oo-ui-labelElement-label {
					text-overflow: ellipsis;
					overflow: hidden;
					width: 100%;
				}
			}
		}

		.flow-ui-topicMenuSelectWidget {
			position: absolute;
			width: 100%;
			max-height: 400px;

			/* Workaround for flicker and https://code.google.com/p/chromium/issues/detail?id=343244 */
			-webkit-transform: translateZ( 0 );
		}
	}

	.flow-ui-reorderTopicsWidget {
		display: inline-block;
		float: right;
		position: relative;
		.flow-ui-reorderTopicsWidget-menu {
			right: 0;
		}
	}
}

